CSS fix for text overflow with footer

--- a/css/template.css
+++ b/css/template.css
@@ -1,45 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');
 
+::-webkit-scrollbar {
+  /* This is the magic bit */
+  display: none;
+}
 
 .body {
-  padding: 0px;
-  margin: 0px;
-  font-family: 'Lato', sans-serif !important;
-  font-weight: 900;
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Lato', sans-serif !important;
+    font-weight: 900;
+    overflow: hidden;
 }
 
 .header {
-  background-color: #34BB66;
-  height: 60px;
-  width: 100%;
-  margin-top: 0px;
+    background-color: #34BB66;
+    height: 60px;
+    width: 100%;
+    margin-top: 0px;
 }
 
 #notif {
-  height: 20px;
-  float: right;
-  margin-top: 20px;
-  margin-right: 3%;
+    height: 20px;
+    float: right;
+    margin-top: 20px;
+    margin-right: 3%;
 }
 
 .page-title {
-  text-align: center;
-  vertical-align: middle;
+    text-align: center;
+    vertical-align: middle;
 }
 
 #pin-location {
-  height: 25px;
-  margin-right: 5px;
-  display: inline-block;
-  margin-top: -5px;
+    height: 25px;
+    margin-right: 5px;
+    display: inline-block;
+    margin-top: -5px;
 }
 
 #header-text {
-  font-size: 20px;
-  margin-top: 15px;
-  display: inline-block;
-  color: #ffffff;
-  font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    margin-top: 15px;
+    display: inline-block;
+    color: #ffffff;
+    font-family: 'Lato', sans-serif;
 }
 
 #back {
@@ -50,31 +55,41 @@
 }
 
 .content {
-  margin-left: 3%;
-  margin-right: 3%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-left: 3%;
+    margin-right: 3%;
+    max-height: 80%;
+    overflow:auto;
+}
+
+.content img {
+    height: 25px;
+    width: auto;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-right: 10px;
-  border-top: solid 1px #d3d3d3;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-right: 10px;
+    border-top: solid 1px #d3d3d3;
+    background-color: #ffffff;
 }
 
 .footer img {
-  height: 20px;
+    height: 20px;
   /*display: inline-block;*/
 }
 
 .footer ul {
-  text-align: justify;
-  padding-left: 3%;
-  padding-right: 3%;
-  padding-top: 3px;
+    text-align: justify;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 3px;
 }
 
 .footer ul:after {
@@ -89,15 +104,15 @@
 }
 
 .footer ul>li {
-  display: inline;
+    display: inline;
 }
 
 .centered {
-  text-align: center;
+    text-align: center;
 }
 
 .justify {
-  text-align: justify;
+    text-align: justify;
 }
 
 .launch {
